--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h2>Full-Stack Web Developer</h2>
-									<p>From bartending in restaurants, Law Enforcement in the military, and now immersed in the world functional programming</p>
+									<p>From bartending in restaurants, Law Enforcement in the military, and now immersed in the world of functional programming</p>
 								</header>
 								<p class="image main"><img src="images/doWhatIsGreat.jpg" alt="" /></p>
 								
@@ -42,23 +42,22 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="https://nickmartello.github.io/TriviaGame/">Click To Play</h2>
+										<h2><a href="https://nickmartello.github.io/TriviaGame/">Click To Play</h2></a>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>DC Comics based trivia game.</p>
+									<p class="image fit"><img src="images/batman.jpg"/></p>
+									<p>This project was built using Javascript and jQuery. It is a timed triva game with a DC Comic theme. You have 10 seconds to answer each question or the intervalTimer will skip to the next question</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/nickmartello/TriviaGame" class="button">Code</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<h2><a href="https://drive.google.com/file/d/1bgt0SkM-aqmIMQ_joQvTeWdYzRqYaG4O/view?usp=sharing">Click To See</h2></a>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p class="image fit"><img src="images/shopping.jpg"></p>
+									<p>This is a Nodejs app with a MYSQL database. You will shopping online and as the customer can choose which item you would like to purchase and the quantity's stock will be shown along with the price. Order items and see the stock pile lower.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/nickmartello/bamazon" class="button">Code</a></li>
 									</ul>
 								</article>
 								<article>
