--- a/index.html
+++ b/index.html
@@ -5,140 +5,130 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Nick Martello</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
+<head>
+	<title>Nick Martello</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
 
-				<!-- Intro -->
-					<div id="intro">
-						<h1>Nick Martello</h1>
-						<p>Portfolio of my personal projects.</p>
-						<ul class="actions">
-							<li><a href="#main" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
-					</div>
-				<!-- Main -->
-					<div id="main">
+<body class="is-preload">
 
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<h2>Full-Stack Web Developer</h2>
-									<p>From bartending in restaurants, Law Enforcement in the military, and now immersed in the world of functional programming</p>
-								</header>
-								<p class="image main"><img src="images/doWhatIsGreat.jpg" alt="" /></p>
-								
-							</article>
+	<!-- Wrapper -->
+	<div id="wrapper" class="fade-in">
 
-						<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-										<h2><a href="https://nickmartello.github.io/TriviaGame/">Click To Play</h2></a>
-									</header>
-									<p class="image fit"><img src="images/batman.jpg"/></p>
-									<p>This project was built using Javascript and jQuery. It is a timed triva game with a DC Comic theme. You have 10 seconds to answer each question or the intervalTimer will skip to the next question</p>
-									<ul class="actions special">
-										<li><a href="https://github.com/nickmartello/TriviaGame" class="button">Code</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="https://drive.google.com/file/d/1bgt0SkM-aqmIMQ_joQvTeWdYzRqYaG4O/view?usp=sharing">Click To See</h2></a>
-									</header>
-									<p class="image fit"><img src="images/shopping.jpg"></p>
-									<p>This is a Nodejs app with a MYSQL database. You will shopping online and as the customer can choose which item you would like to purchase and the quantity's stock will be shown along with the price. Order items and see the stock pile lower.</p>
-									<ul class="actions special">
-										<li><a href="https://github.com/nickmartello/bamazon" class="button">Code</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-							</section>
-					</div>
+		<!-- Intro -->
+		<div id="intro">
+			<h1>Nick Martello</h1>
+			<p>Portfolio of my personal projects.</p>
+			<ul class="actions">
+				<li><a href="#main" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+			</ul>
+		</div>
+		<!-- Main -->
+		<div id="main">
 
-				<!-- Footer -->
-					<footer id="footer">
-						<section class="split contact">
-							<section>
-								<h3>Contact</h3>
-								<p><a href = "mailto: thenickmartello@gmail.com">thenickmartello@gmail.com</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/nick-martello-57538418a/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
-									<li><a href="https://github.com/nickmartello" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section>
-						</section>
-					</footer>
+			<!-- Featured Post -->
+			<article class="post featured">
+				<header class="major">
+					<h2>Full-Stack Web Developer</h2>
+					<p>From bartending in restaurants, Law Enforcement in the military, and now immersed in the world of
+						functional programming</p>
+				</header>
+				<p class="image main"><img src="images/doWhatIsGreat.jpg" alt="" /></p>
 
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; nickmartello.tech</li></ul>
-					</div>
+			</article>
 
-			</div>
+			<!-- Posts -->
+			<section class="posts">
+				<article>
+					<header>
+						<h2><a href="https://nickmartello.github.io/TriviaGame/">Click To Play</h2></a>
+					</header>
+					<p class="image fit"><img src="images/batman.jpg" /></p>
+					<p>This project was built using Javascript and jQuery. It is a timed triva game with a DC Comic
+						theme. You have 10 seconds to answer each question or the intervalTimer will skip to the next
+						question</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/nickmartello/TriviaGame" class="button">Code Here</a></li>
+					</ul>
+				</article>
+				<article>
+					<header>
+						<h2><a href="https://drive.google.com/file/d/1bgt0SkM-aqmIMQ_joQvTeWdYzRqYaG4O/view?usp=sharing">Click
+								To See</h2></a>
+					</header>
+					<p class="image fit"><img src="images/shopping.jpg"></p>
+					<p>This is a Nodejs app with a MYSQL database. You will shopping online and as the customer can
+						choose which item you would like to purchase and the quantity's stock will be shown along with
+						the price. Order items and see the stock pile lower.</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/nickmartello/bamazon" class="button">Code Here</a></li>
+					</ul>
+				</article>
+				<article>
+					<header>
+						<h2><a href="https://nickmartello.github.io/ColorGame/">Click To Play</a></h2>
+					</header>
+					<p class="image fit"><img src="images/colors.jpg" alt="" /></p>
+					<p>Javascript color guessing game. Pick the square that matches the randomly generated RGB value at the top of
+						the screen. Play in Easy or Hard mode!</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/nickmartello/ColorGame" class="button">Code Here</a></li>
+					</ul>
+				</article>
+				<article>
+					<header>
+						<h2><a href="https://drive.google.com/file/d/1Gs6Vz2g8hPCxt5Enw4CGdaZAcRUh4rwW/view">Click To See</a></h2>
+					</header>
+					<p class="image fit"><img src="images/concert.jpg" alt="" /></p>
+					<p>This API Nodejs app searches for concerts by the artists name, returns song information and a preview URL for
+						the band searched for, and returns details about a given movie title. 
+					</p>
+					<ul class="actions special">
+						<li><a href="https://github.com/nickmartello/liri-node-app" class="button">Code Here</a></li>
+					</ul>
+				</article>	
+			</section>
+		</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<!-- Footer -->
+		<footer id="footer">
 
-	</body>
+			<section>
+				<ul class="icons alt">
+					<h3><a href="mailto: thenickmartello@gmail.com">thenickmartello@gmail.com</a></h3>
+
+					<li><a href="https://www.linkedin.com/in/nick-martello-57538418a/"
+							class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
+					<li><a href="https://github.com/nickmartello" class="icon brands alt fa-github"><span
+								class="label">GitHub</span></a></li>
+				</ul>
+			</section>
+
+		</footer>
+
+		<!-- Copyright -->
+		<div id="copyright">
+			<ul>
+				<li>&copy; nickmartello.tech</li>
+			</ul>
+		</div>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
